feat: accept invite
